fix: Update launcher to support MacOS specific VM args and requirements